manifests/amd64-apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
  annotations:
    # AWS ALB Specific Annotations
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sock-shop
        
    # Load Balancer Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'  # Removed HTTPS part      
        
    # Additional Tags
    alb.ingress.kubernetes.io/tags: Environment=Demo,Project=sock-shop
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            port:
              number: 80
